--- a/templates/wg.conf
+++ b/templates/wg.conf
@@ -7,11 +7,11 @@
 Address = {{$first :=true}}{{range .serverConfig.Interface.Addresses }}{{if $first}}{{$first = false}}{{else}},{{end}}{{.}}{{end}}
 ListenPort = {{ .serverConfig.Interface.ListenPort }}
 PrivateKey = {{ .serverConfig.KeyPair.PrivateKey }}
-{{if .globalSettings.MTU }}MTU = {{ .globalSettings.MTU }}{{end}}
-{{if .serverConfig.Interface.PostUp }}PostUp = {{ .serverConfig.Interface.PostUp }}{{end}}
-{{if .serverConfig.Interface.PreDown }}PreDown = {{ .serverConfig.Interface.PreDown }}{{end}}
-{{if .serverConfig.Interface.PostDown }}PostDown = {{ .serverConfig.Interface.PostDown }}{{end}}
-{{if .globalSettings.Table }}Table = {{ .globalSettings.Table }}{{end}}
+{{if .globalSettings.MTU }}MTU = {{ .globalSettings.MTU }}
+{{end}}{{if .serverConfig.Interface.PostUp }}PostUp = {{ .serverConfig.Interface.PostUp }}
+{{end}}{{if .serverConfig.Interface.PreDown }}PreDown = {{ .serverConfig.Interface.PreDown }}
+{{end}}{{if .serverConfig.Interface.PostDown }}PostDown = {{ .serverConfig.Interface.PostDown }}
+{{end}}{{if .globalSettings.Table }}Table = {{ .globalSettings.Table }}{{end}}
 
 {{range .clientDataList}}{{if eq .Client.Enabled true}}
 # ID:           {{ .Client.ID }}
@@ -22,6 +22,6 @@ PrivateKey = {{ .serverConfig.KeyPair.PrivateKey }}
 [Peer]
 PublicKey = {{ .Client.PublicKey }}
 {{if .Client.PresharedKey }}PresharedKey = {{ .Client.PresharedKey }}{{end}}
-AllowedIPs = {{$first :=true}}{{range .Client.AllocatedIPs }}{{if $first}}{{$first = false}}{{else}},{{end}}{{.}}{{end}}{{range .Client.ExtraAllowedIPs }},{{.}}{{end}}{{end}}
+AllowedIPs = {{$first :=true}}{{range .Client.AllocatedIPs }}{{if $first}}{{$first = false}}{{else}},{{end}}{{.}}{{end}}{{range .Client.ExtraAllowedIPs }},{{.}}{{end}}
 {{if .Client.Endpoint }}Endpoint = {{ .Client.Endpoint }}{{end}}
-{{end}}
+{{end}}{{end}}
